[project]
name = "espnow-modem"
version = "0.1.0"
description = "A Python library to work with a espnow modem"
readme = "README.md"
authors = [
    { name = "Michael Jalloh", email = "michaeljalloh19@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["seriallink"]
authors = [{ name = "Michael Jalloh", email = "michaeljalloh19@gmail.com" }]
maintainers = [{ name = "Michael Jalloh", email = "michaeljalloh19@gmail.com" }]
classifiers= [
        "Development Status :: 4 - Beta",      
        "Intended Audience :: Developers",      
        "Topic :: Software Development :: Build Tools",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
    ]
keywords=["ESPNow","serial","modem","communication","ESP32"]
[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
